$Id: History,v 1.152 2001-08-24 20:50:42 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     *************************************************************
     * Note that modeling and test have their own History files. *
     *************************************************************

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

History file for visualization category
---------------------------------------

24th August 2001  John Allison  (vis-V03-02-13)
- Fixed bugs in G4VisManager::GeometryHasChanged.
- Separated out G4Scene::CalculateExtent.
- Improved robustness and timeliness of invocation of some commands.
- Improved READMEs.
- Reduced warnings from OpenGL - see OpenGL/History.
- Cosmetic changes to test.

17th August 2001  John Allison  (vis-V03-02-12)
- Coworks with greps-V03-02-02 and intercoms-V03-02-04.
- Added G4VisManager::Draw(const G4Scale&,...  Needs intercoms-V03-02-04.
- Added template graphics system XXX.
- Improved verbosity guidance.

14th August 2001  John Allison  (vis-V03-02-11)
- Coworks with greps-V03-02-02 and intercoms-V03-02-03.
- Moved default value G4Transform3D::Identity of argument from
  G4VSceneHandler::BeginPrimitives to
  G4VGraphicsScene::BeginPrimitives.  Needs intercoms-V03-02-03.